k8s/green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-green
  labels:
    app: flask-app
    version: v2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask-app
      version: v2
  template:
    metadata:
      labels:
        app: flask-app
        version: v2
    spec:
      containers:
      - name: flask-app
        image: <Account-ID>.dkr.ecr.us-east-1.amazonaws.com/allianz-demo-repo:green
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
