k8s/blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-service
  labels:
    app: flask-app
    version: v1
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: flask-app
    version: v1
